Added the hover bar

--- a/src/styles.css
+++ b/src/styles.css
@@ -6,4 +6,12 @@
 
 .main-button{
   position: relative;
+  z-index: 100;
+}
+
+#console-box {
+  position: relative;
+  padding: 5px;
+  background-color: black;
+  color: white;
 }
