--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,38 @@
-.size {
-  position: absolute;
-  top: 0px;
-  left: 0px;
+.video {
+  text-align: center;
+  transition: 0.5s;
 }
 
-.main-button{
-  position: relative;
-  z-index: 100;
+.vid-and-canvas {
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: auto;
+  margin-bottom: auto;
+  left: 0;
+  right: 0;
+  text-align: center;
+}
+
+#main-button-bar {
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: auto;
+  left: 0;
+  right: 0;
+  bottom: 3%;
+  text-align: center;
+}
+
+.main-btn{
+  transition: 0.5s;
+  color: gray;
+  font-size: large;
+}
+
+.main-btn:hover {
+  color: lightgray;
 }
 
 #console-box {
