--- a/src/pages/Detection/Detection.css
+++ b/src/pages/Detection/Detection.css
@@ -11,9 +11,9 @@ a {
   }
   
   header img {
-    margin-top: 5px;
+    margin-top: 8px;
     float: left;
-    width: 20px;
+    width: 22px;
   }
   
   .title {
@@ -34,6 +34,7 @@ a {
     color: darkgray;
     letter-spacing: 1pt;
     margin-left: 14%;
+    margin-top: -2%;
   }
 
   .video {
@@ -56,7 +57,7 @@ a {
   #main-button-bar {
       position: absolute;
       margin: auto;
-      left: 50%;
+      left: 47%;
       bottom: 3%;
       text-align: center;
       position: absolute;
@@ -65,12 +66,14 @@ a {
       align-items: flex-end;
   }
 
+  .main-btn-container {
+    margin: 0% 100%;
+  }
+
   .main-btn{
-      transition: 0.5s;
-      color: gray;
-      font-size: large;
+    color: gray;
   }
 
   .main-btn:hover {
-      color: lightgray;
+    color: lightgray;
   }
